RESOLVED FIXED191598
Transform of composited layer not updated when layer also needs repaint
https://bugs.webkit.org/show_bug.cgi?id=191598
Summary Transform of composited layer not updated when layer also needs repaint
Ali Juma
Reported 2018-11-13 13:22:50 PST
Created attachment 354693 [details] Test case After the changes to compositing in bug 90342, a style change that affects a composited layer's transform and simultaneously changes another property triggering repaint will no longer trigger a compositing geometry update, so the GraphicsLayer's transform never gets updated. For example, after changing both the background-color and the transform of a composited layer, the layer gets repainted with the new color but doesn't move.
Attachments
Test case (459 bytes, text/html)
2018-11-13 13:22 PST, Ali Juma
no flags
Patch (4.21 KB, patch)
2018-11-13 13:26 PST, Ali Juma
no flags
Patch for landing (4.20 KB, patch)
2018-11-13 14:25 PST, Ali Juma
no flags
Ali Juma
Comment 1 2018-11-13 13:26:32 PST
Simon Fraser (smfr)
Comment 2 2018-11-13 14:10:11 PST
Comment on attachment 354695 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354695&action=review Nice, thanks for the fix. > LayoutTests/compositing/geometry/transform-and-repaint-updates-geometry.html:22 > +requestAnimationFrame(function() { () =>
Ali Juma
Comment 3 2018-11-13 14:25:55 PST
Created attachment 354702 [details] Patch for landing
WebKit Commit Bot
Comment 4 2018-11-14 05:13:24 PST
Comment on attachment 354702 [details] Patch for landing Clearing flags on attachment: 354702 Committed r238170: <https://trac.webkit.org/changeset/238170>
WebKit Commit Bot
Comment 5 2018-11-14 05:13:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-11-14 05:14:24 PST
Note You need to log in before you can comment on or make changes to this bug.