Transform of composited layer not updated when layer also needs repaint https://bugs.webkit.org/show_bug.cgi?id=191598

Reviewed by Simon Fraser.

Source/WebCore:

Trigger a compositing geometry update whenever a RenderLayer's transform changes,
even when other parts of its style have changed in a way that produces a
StyleDifference greater than RecompositeLayer.

Test: compositing/geometry/transform-and-repaint-updates-geometry.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::layerStyleChanged):

LayoutTests:

* compositing/geometry/transform-and-repaint-updates-geometry-expected.html: Added.
* compositing/geometry/transform-and-repaint-updates-geometry.html: Added.


Canonical link: https://commits.webkit.org/206374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238170 268f45cc-cd09-0410-ab3c-d52691b4dbfc